--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         video { display: block; width: 100%; height: auto; }
         canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; touch-action: none; }
         
-        button { padding: 12px 10px; cursor: pointer; border: none; border-radius: 8px; font-weight: bold; font-size: 13px; flex: 1 1 30%; min-width: 90px; color: white; }
+        button { padding: 12px 10px; cursor: pointer; border: none; border-radius: 8px; font-weight: bold; font-size: 13px; flex: 1 1 30%; min-width: 90px; color: white; touch-action: manipulation; }
         .btn-play { background: #2ecc71; }
         .btn-speed { background: #9b59b6; }
         .btn-track { background: #3498db; }
@@ -162,4 +162,5 @@
 </body>
 
 </html>
+
 
