--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 </head>
 <body>
 
-    <div class="app-title">林田(manami) SHOT PUT ANALYZER（棒人間と軌道）</div>
+    <div class="app-title">
+        林田manami がつくったよ。<br>
+        SHOT PUT ANALYZER<br>
+        （棒人間と軌道）<br>
+    <span style="font-size: 14px; color: #bbb;">〜2026,2,12〜</span>
+</div>
     
     <div class="how-to">
         <strong>【使い方】</strong><br>
@@ -167,4 +172,5 @@
 </script>
 </body>
 </html>
+
 
